fixed gallery controls collapsing elements

--- a/src/App.css
+++ b/src/App.css
@@ -63,9 +63,16 @@ header {
 .gallery-controls {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
+  flex-wrap: wrap;
   gap: 1.5rem;
   padding: 0.5rem 0;
+}
+
+.gallery-controls__wrapper {
+  display: flex;
+  align-self: flex-end;
+  gap: 1.5rem;
 }
 
 .gallery-controls__group {
@@ -104,7 +111,7 @@ main {
   min-height: 100vh;
   align-items: center;
   font-family: var(--font-main);
-  gap: 5vh;
+  gap: 6vh;
 }
 
 .app-wrapper > * {
@@ -115,4 +122,9 @@ main {
   flex: 1;
   display: flex;
   flex-direction: column;
+}
+
+#gallery-section-title {
+  font-size: 2.5em;
+  margin-right: auto;
 }
